added team window